--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
             "email": "nicolas.coutureau@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Project\\": ""
+        }
+    }
 }
